# security-audit-toolkit

./: LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample-report.md
security-audit-toolkit/: README.md  main.py  requirements.txt
security-audit-toolkit/config/: allowlist_ports.json
security-audit-toolkit/modules/: file_permissions.py  log_audit.py  network_config.py  open_ports.py  password_policy.py  report_generator.py  ssh_audit.py  user_accounts.py
src/audit/: __init__.py  cli.py  findings.py  fixtures.py  report.py
src/audit/checks/: aws_iam.py  base.py  m365.py
tests/: test_findings.py  test_m365_checks.py
